[package]
name = "postgres-derives"
version = "0.1.0"
edition = "2021"
description = "Parsing rows from postgres to structs and multiple utilities for https://github.com/sfackler/rust-postgres"
license = "MIT"
authors = ["Francisco López <donflopez@gmail.com>"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
